[tool.poetry]
name = "tlc_yellow_trips_2018"
version = "0.1.0"
description = ""
authors = ["liviaspereira <liviaspereira@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.31"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
